# Ribbon-Bridge-Measurement

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: paramater.yaml  paramater_gazebo.yaml
launch/: boat_measurement.launch  camera.launch  debug.launch  gazebo.launch  measurement_for_multi_tracker.launch  ribbon_bridge_corner.launch  ribbon_bridge_corner_gazebo.launch  ribbon_bridge_corner_with_rviz.launch  ribbon_bridge_corner_with_rviz_gazebo.launch  ribbon_bridge_lsd.launch  ribbon_bridge_lsd_gazebo.launch  ribbon_bridge_lsd_with_rviz.launch  video_play.launch
msg/: RibbonBridge.msg  RibbonBridges.msg
rviz/: rviz_config.rviz
src/: collect_data.py  collect_data0.py  dummy_bbox_maker.py  dummy_bbox_maker_gazebo.py  measured_data_plotter.py  measurement_for_multi_tracker.cpp  measurement_for_multi_tracker_.cpp  measurement_for_multi_tracker_backup.cpp  ribbon_bridge_corner.cpp  ribbon_bridge_detect_server.py  ribbon_bridge_detect_service.py  ribbon_bridge_lsd.cpp  ribbon_bridge_tracker.cpp  update_regions_of_interest.cpp
srv/: DetectRibbonBridges.srv
